--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 	<div id="container">
 		<div id="cabecera">
 			Hyperblog
-			<span id="tagline">Tu blog de cabecera
+			<span id="tagline">Bienvenido a Superblog
 			</span>
 		</div>
 		<div id="post">
