color de fondo, logo nuevo y algunos cambios otros

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,10 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
+			<img id="logo" src="imagenes/logo.png" height="45" />
 			Hyperblog
 			<span id="tagline">Bienvenido a Superblog 3.1
-			</span>
+			</span> 
 		</div>
 		<div id="post">
 			<h1>Este es el titulo atractivo e interesante del post</h1>
