--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,9 @@
 			<p>
 				suscribete y dale like
 			</p>
+			<footer id="footer">
+				<h2>HECHO CON AMOR <3</h2>
+			</footer>
 </body>
 		</div>
 	</div>
