--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 	<div id="container">
 		<div id="cabecera">
 			<img id="logo" src="imagenes/logo.png" height="45" />
-			Hyperblog
+			Sperblog
 			<span id="tagline">Bienvenido a Superblog 3.1
 			</span> 
 		</div>
