--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 		<div id="cabecera">
 			<img id="logo" src="imagenes/logo.png" height="45" />
 			Sperblog
-			<span id="tagline">Bienvenido a Superblog 3.1
+			<span id="tagline">Bienvenido a Superblog tu blog de confienza
 			</span> 
 		</div>
 		<div id="post">
